Definition de BookService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=books
 
+spring.profiles.active=dev
+
+# Pour colore la sortie au niveau du terminal pour une meilleurs lisibilite
+spring.output.ansi.enabled=ALWAYS
+
+# Mettre le journal dans un fichier
+logging.file.name=./var/logs/logger.log
 
 spring.datasource.url=jdbc:mysql://localhost:3306/books
 spring.datasource.username=root
